# recallwell

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/: CONFIGURATION.md  TESTING.md  USAGE.md
src/: cli.rs  commands.rs  config.rs  export.rs  history.rs  lib.rs  library.rs  main.rs  source.rs
src/ingest/: docx.rs  epub.rs  html.rs  mod.rs  pdf.rs  queue.rs
src/server/: auth.rs  error.rs  mod.rs  routes.rs  sse.rs
src/server/handlers/: ask.rs  history.rs  ingest.rs  libraries.rs  mod.rs  source.rs
src/ui/: mod.rs
src/ui/assets/: recallwell.css  tailwind.min.js
src/ui/templates/: index.html
tests/: ask.rs  cli.rs  export.rs  history.rs  libraries.rs  parsers.rs  server.rs  source.rs
