[package]
name = "recallwell"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
authors = ["Mohamed Yasser <yasserrmd@users.noreply.github.com>"]
repository = "https://github.com/yasserrmd/recallwell"
description = "Your knowledge, indexed and citable. A personal knowledge base on pagebridge."
readme = "README.md"
keywords = ["knowledge-base", "rag", "search", "citations", "personal"]
categories = ["command-line-utilities"]

[[bin]]
name = "recallwell"
path = "src/main.rs"

[dependencies]
# Pagebridge library (the engine that powers recallwell)
pagebridge = { git = "https://github.com/YASSERRMD/pagebridge.git", rev = "82d4f28d92e211a7784e3ba902df5567a6f6ccbd", features = ["sqlite", "openai"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web server
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "fs"] }
hyper = "1.4"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# OS-standard directories
directories = "5.0"

# Document parsing
pdf-extract = "0.7"
epub = "2.1"
scraper = "0.20"
docx-rs = "0.4"
mime_guess = "2.0"

# Tokens and IDs
ulid = { version = "1.1", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# Concurrency utilities
dashmap = "6.1"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Open the browser
opener = "0.7"

# Local persistence (history.db)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
predicates = "3.1"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
